# AURA-Engine-v1.0.0

./: BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  electron-builder.yml  index.html  installer.nsi  ns.ps1  package-lock.json  package.json
.github/workflows/: c-cpp.yml  release.yml
assets/screenshots/: README.md
docs/: ARCHITECTURE.md  PHYSICS.md  SCRIPTING.md  TEMPORAL.md
electron/: main.js  preload.js
electron/resources/: README.md
src/: App.tsx  index.css  main.tsx
src-cpp/: BUILD.md  CMakeLists.txt  build.bat
src-cpp/include/kevla/: Core.h  Entity.h  Logger.h  Matrix.h  Scene.h  Types.h  Vector.h
src-cpp/include/kevla/ai/: BehaviorTree.h
src-cpp/include/kevla/animation/: Animation.h
src-cpp/include/kevla/assets/: AssetManager.h
src-cpp/include/kevla/editor/: Editor.h  EditorPanels.h  Gizmo.h  Hotkeys.h  MaterialEditor.h  SculptPanel.h  UVEditor.h  UndoRedo.h
src-cpp/include/kevla/physics/: Collider.h  Joint.h  PhysicsWorld.h  RigidBody.h
src-cpp/include/kevla/render/: Framebuffer.h  Light.h  Material.h  Mesh.h  Renderer.h  Shader.h  Terrain.h
src-cpp/include/kevla/sculpt/: Sculpt.h
src-cpp/include/kevla/serialization/: SceneSerialization.h
src-cpp/include/kevla/vfx/: VFXGraph.h
src-cpp/include/triga/: Core.h  Entity.h  Logger.h  Matrix.h  Scene.h  Types.h  Vector.h
src-cpp/include/triga/ai/: BehaviorTree.h
src-cpp/include/triga/animation/: Animation.h
src-cpp/include/triga/assets/: AssetManager.h
src-cpp/include/triga/core/: Input.h  Window.h
src-cpp/include/triga/editor/: Editor.h  EditorPanels.h  Gizmo.h  Hotkeys.h  MaterialEditor.h  SculptPanel.h  UVEditor.h  UndoRedo.h
src-cpp/include/triga/physics/: Collider.h  Joint.h  PhysicsWorld.h  RigidBody.h
src-cpp/include/triga/render/: Framebuffer.h  Light.h  Material.h  Mesh.h  Renderer.h  Shader.h  Terrain.h  Texture.h
src-cpp/include/triga/sculpt/: Sculpt.h
src-cpp/include/triga/serialization/: SceneSerialization.h
src-cpp/shaders/: README.md
src-cpp/src/: main.cpp
src-cpp/src/ai/: BehaviorTree.cpp
src-cpp/src/animation/: Animation.cpp
src-cpp/src/assets/: AssetManager.cpp
src-cpp/src/core/: Core.cpp  Entity.cpp  Input.cpp  Logger.cpp  Scene.cpp  Types.cpp  Window.cpp
src-cpp/src/editor/: Editor.cpp  EditorPanels.cpp  Gizmo.cpp  Hotkeys.cpp  MaterialEditor.cpp  SculptPanel.cpp  UVEditor.cpp  UndoRedo.cpp  main.cpp
src-cpp/src/physics/: Collider.cpp  Joint.cpp  PhysicsWorld.cpp  RigidBody.cpp
src-cpp/src/render/: Framebuffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Terrain.cpp  Texture.cpp
src-cpp/src/sculpt/: Sculpt.cpp
src-cpp/src/serialization/: SceneSerialization.cpp
src-cpp/src/vfx/: VFXGraph.cpp
src/components/: BottomPanel.tsx  BuildPanel.tsx  DesktopBuild.tsx  ExportManager.tsx  Hierarchy.tsx  Icons.tsx  Inspector.tsx  MaterialEditor.tsx  ParticlePanel.tsx  SculptPanel.tsx  SplashScreen.tsx  Timeline.tsx  Viewport.tsx  WindowChrome.tsx
src/engine/: Animation.ts  AssetBundle.ts  BehaviorTree.ts  CharacterController.ts  Culling.ts  DecalSystem.ts  InverseKinematics.ts  Joints.ts  LODSystem.ts  Lightmapper.ts  Navigation.ts  Networking.ts  ParticleSystem.ts  Prefab.ts  Profiler.ts  RagdollSystem.ts  SculptSystem.ts  ShaderSystem.ts  SoftBodySystem.ts  TerrainSystem.ts  UICanvas.ts  VehicleSystem.ts  VisualScripting.ts  WaterSystem.ts  audio.ts  buildSystem.ts  lua.ts  parallel.ts  physics.ts  store.ts  temporal.ts  types.ts
src/engine/sculpt/: BVH.ts  FalloffCurves.ts  MaskSystem.ts  SculptLayers.ts  SculptSystem.ts  SymmetrySystem.ts  VoxelSystem.ts  index.ts  types.ts
